--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rady-ben.github.io/pacemaker-frontend/pacemaker",
+  "homepage": "https://rady-ben.github.io/pacemaker-frontend",
   "name": "pacemaker-frontend",
   "version": "0.1.0",
   "private": true,
